Fixed spacing on wind module...
Adjusted the spacing of the beaufort and wind run labels
Slightly increased the size of the light theme labels for beaufort and wind run to match the size of dark theme

--- a/css/main.dark.css
+++ b/css/main.dark.css
@@ -6102,7 +6102,7 @@ weather34windrunspan {
 
 .beaufort1,
 .windrun1 {
-  margin-top: 100px;
+  margin-top: 102px;
   font-size: .65rem;
   width: 6.5rem;
   display: flex
