--- a/css/main.light.css
+++ b/css/main.light.css
@@ -6024,14 +6024,14 @@ indoorred1 {
 
 .beaufort1,
 .windrun1 {
-  margin-top: 105px;
+  margin-top: 106px;
   width: 6.5rem;
-  display: flex
+  display: flex;
+  font-size: .65rem;
 }
 
 .windrun1 {
-  margin-left: 222px;
-  font-size: .55rem;
+  margin-left: 240px;
   border: 0;
   -webkit-border-radius: 4px;
   border-radius: 4px;
@@ -6046,7 +6046,6 @@ weather34windrunspan {
 
 .beaufort1 {
   margin-left: 0;
-  font-size: .55rem;
   border: 0;
   border-radius: 4px;
   color: #2d3a4b
